[tool.poetry]
name = "dreamprf-diary-bot"
version = "0.1.0"
description = ""
authors = ["Nikolai Riabykh nikolay.ryabykh@gmail.com"]
readme = "README.md"
packages = [{include = "dreamprf_diary_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
gsheetsdb = "^0.1.13.1"
aiogram = "^2.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
