[tool.poetry]
name = "dreamprf-diary-bot"
version = "0.4.1"
description = ""
authors = ["Nikolai Riabykh <nikolay.ryabykh@gmail.com>"]
readme = "README.md"
packages = [{include = "dreamprf_diary_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.24"
google-api-python-client = "^2.75.0"
oauth2client = "^4.1.3"
google-auth = "^2.16.0"
tomli = "^2.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
